// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageForm component agentTyping shows typing indicator 1`] = `
<div
  className="MessageForm"
  style={
    Object {
      "boxShadow": "0 1px 2px 0 rgba(0, 0, 0, 0.2)",
      "zIndex": 1,
    }
  }
>
  <div
    className="poke"
  >
    <div
      className="pokeBody"
    >
      <span
        style={
          Object {
            "fontFamily": "Lato, sans-serif",
          }
        }
      >
        Agent is typing
      </span>
      <TypingIndicator
        xScale={0.75}
        yScale={0.5}
      />
    </div>
  </div>
  <div
    className="messageArea"
  >
    <EmojiTextArea
      disabled={false}
      maxLength={1024}
      name="message"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onReturn={[Function]}
      placeholder="Send us a message..."
      style={
        Object {
          "color": "#68b588",
          "fontFamily": "Source Sans Pro",
        }
      }
    />
    <button
      className="messageFormBtn attachmentBtn"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "color": "#848484",
          "fontSize": "16px",
        }
      }
    >
      <i
        className="fa fa-paperclip"
        title="Send file"
      />
    </button>
    <button
      className="messageFormBtn emojiBtn"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "color": "#848484",
          "fontSize": "16px",
        }
      }
    >
      <i
        className="fa fa-smile-o"
        title="Emoji picker"
      />
    </button>
    <MenuButton
      buttonStyles={
        Object {
          "background": "red",
          "borderRight": "2px solid rgb(244, 244, 248)",
        }
      }
      className=""
      closeOnChildClick={true}
      icon="bars"
      iconStyles={
        Object {
          "color": "#848484",
          "display": "none",
          "fontSize": "19px",
          "marginTop": "1px",
        }
      }
      keepChildrenMounted={false}
      menuPosition="top-right"
      offset={
        Object {
          "horizontal": "-115px",
          "vertical": "40px",
        }
      }
      title="Options"
    >
      <Menu
        containerStyle={
          Object {
            "backround": "green",
            "fontFamily": "Lato, sans-serif",
          }
        }
        items={
          Array [
            Object {
              "disabled": false,
              "icon": Object {
                "name": "volume-off",
                "style": Object {
                  "color": "#2199e8",
                  "fontSize": 20,
                },
              },
              "id": "muteSounds",
              "label": "Mute Sounds",
              "onClick": [Function],
              "style": Object {
                "color": "#2199e8",
                "fontFamily": "Comic Sans",
              },
              "title": "Mute new message sounds",
            },
            Object {
              "disabled": false,
              "icon": Object {
                "name": "envelope-o",
                "style": Object {
                  "color": "#2199e8",
                  "fontSize": 20,
                },
              },
              "id": "emailTranscript",
              "label": "Email Transcript",
              "onClick": [Function],
              "style": Object {
                "color": "#2199e8",
                "fontFamily": "Comic Sans",
              },
              "title": "Email a full transcript of the current chat",
            },
          ]
        }
      />
    </MenuButton>
    <EmojiPicker
      addEmoji={[Function]}
      emojiFilter={[Function]}
      ignoreOutsideClickOnSelectors={
        Array [
          ".emojiBtn",
        ]
      }
      onOutsideClick={[Function]}
      visible={false}
    />
  </div>
</div>
`;

exports[`MessageForm component rendering renders 1`] = `
<div
  className="MessageForm"
  style={
    Object {
      "boxShadow": "0 1px 2px 0 rgba(0, 0, 0, 0.2)",
      "zIndex": 1,
    }
  }
>
  <div
    className="messageArea"
  >
    <EmojiTextArea
      disabled={false}
      maxLength={1024}
      name="message"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onReturn={[Function]}
      placeholder="Send us a message..."
      style={
        Object {
          "color": "#68b588",
          "fontFamily": "Source Sans Pro",
        }
      }
    />
    <button
      className="messageFormBtn attachmentBtn"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "color": "#848484",
          "fontSize": "16px",
        }
      }
    >
      <i
        className="fa fa-paperclip"
        title="Send file"
      />
    </button>
    <button
      className="messageFormBtn emojiBtn"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "color": "#848484",
          "fontSize": "16px",
        }
      }
    >
      <i
        className="fa fa-smile-o"
        title="Emoji picker"
      />
    </button>
    <MenuButton
      buttonStyles={
        Object {
          "background": "red",
          "borderRight": "2px solid rgb(244, 244, 248)",
        }
      }
      className=""
      closeOnChildClick={true}
      icon="bars"
      iconStyles={
        Object {
          "color": "#848484",
          "display": "none",
          "fontSize": "19px",
          "marginTop": "1px",
        }
      }
      keepChildrenMounted={false}
      menuPosition="top-right"
      offset={
        Object {
          "horizontal": "-115px",
          "vertical": "40px",
        }
      }
      title="Options"
    >
      <Menu
        containerStyle={
          Object {
            "backround": "green",
            "fontFamily": "Lato, sans-serif",
          }
        }
        items={
          Array [
            Object {
              "disabled": false,
              "icon": Object {
                "name": "volume-off",
                "style": Object {
                  "color": "#2199e8",
                  "fontSize": 20,
                },
              },
              "id": "muteSounds",
              "label": "Mute Sounds",
              "onClick": [Function],
              "style": Object {
                "color": "#2199e8",
                "fontFamily": "Comic Sans",
              },
              "title": "Mute new message sounds",
            },
            Object {
              "disabled": false,
              "icon": Object {
                "name": "envelope-o",
                "style": Object {
                  "color": "#2199e8",
                  "fontSize": 20,
                },
              },
              "id": "emailTranscript",
              "label": "Email Transcript",
              "onClick": [Function],
              "style": Object {
                "color": "#2199e8",
                "fontFamily": "Comic Sans",
              },
              "title": "Email a full transcript of the current chat",
            },
          ]
        }
      />
    </MenuButton>
    <EmojiPicker
      addEmoji={[Function]}
      emojiFilter={[Function]}
      ignoreOutsideClickOnSelectors={
        Array [
          ".emojiBtn",
        ]
      }
      onOutsideClick={[Function]}
      visible={false}
    />
  </div>
</div>
`;
